<resources>
    <string name="app_name" translatable="false">OrangeFox</string>
    <string name="close">Close</string>
    <string name="err_json">Can\'t parse json</string>
    <string name="err_response">Server returned wrong response code: %1$d</string>
    <string name="err_no_rel">Sorry, we can\'t find this release</string>
    <string name="err_no_rels">Sorry, we can\'t find releases for this device</string>
    <string name="err_no_device">Device not found</string>
    <string name="err_no_ors">Script not found</string>
    <string name="err_no_internet">Looks like your device isn\'t connected to the internet.\nCheck Internet connection and try again</string>
    <string name="err_no_internet_short">Check Internet connection and try again</string>
    <string name="err_dev_not_selected">You didn\'t selected your device</string>
    <string name="err_no_pm_storage">Storage permissions not granted</string>
    <string name="err_check_pm_inernet">Check storage permission or internet connection</string>
    <string name="setup">Grant</string>
    <string name="err_no_pm_root">You didn\'t granted root permission.\nGrant root permission using Magisk Manager</string>
    <string name="err_md5_wrong">Release that you downloaded has been corrupted. Please, redownload release again.</string>
    <string name="err_md5_wrong_exists">Release has been corrupted. Please, redownload release again.</string>
    <string name="help_android11_pm">Tap \"OrangeFox\", then tap \"Allow access to manage all files\"</string>
    <string name="err_ors">Unable to create OpenRecoveryScript file. Please, reboot to recovery and install ZIP file manually.\nFile location is %1$s</string>
    <string name="err_ors_short">Unable to create OpenRecoveryScript file</string>
    <string name="err_service_running">Another release is being downloaded</string>
    <string name="err_ise">Internal server error</string>
    <string name="err_filepicker">Files from download folder or recents folder are not supported.</string>
    <string name="err_file_notfound">File not found</string>
    <string name="err_file_format">Wrong file format</string>
    <string name="err_file_delete">Can\'t delete file</string>
    <string name="err_logs_delete">Can\'t delete logs</string>
    <string name="err_logs_deleted">There is no logs to delete</string>
    <string name="err_ors_delete">Unable to delete OpenRecoveryScript file.\nNo root access.</string>
    <string name="err_reboot_notify">Unable to reboot.\nCheck root access or reboot manually.</string>
    <string name="err_ors_bad">Script contains errors</string>
    <string name="parser_ok">Script successfully parsed</string>
    <string name="parser_load">Load script</string>
    <string name="delete_ors">Delete script</string>
    <string name="deleted_ors">Script was successfully deleted</string>
    <string name="install_latest">Install %1$s %2$s</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="delete_logs">Delete all logs</string>
    <string name="rels_activity">Releases</string>
    <string name="rel_activity">Release Info</string>
    <string name="rel_button">Show Info</string>
    <string name="rel_more">All Builds</string>
    <string name="rel_last">Latest Release</string>
    <string name="rel_current">Installed Release</string>
    <string name="rel_size">File Size</string>
    <string name="rel_commit">Codebase</string>
    <string name="rel_vers">Version</string>
    <string name="rel_type">Build Type</string>
    <string name="rel_name">File Name</string>
    <string name="rel_date">Date</string>
    <string name="rel_stable">Stable</string>
    <string name="rel_beta">Beta</string>
    <string name="rel_installthis">Install This Release</string>
    <string name="rel_info">Info</string>
    <string name="rel_changes">Changelog</string>
    <string name="rel_notes">Notes</string>
    <string name="rel_bugs">Bugs</string>
    <string name="dev_info">Device Info</string>
    <string name="dev_model">Model</string>
    <string name="dev_code">Codename</string>
    <string name="dev_maintainer">Maintainer</string>
    <string name="dev_status">Status</string>
    <string name="dev_maintained">Supported</string>
    <string name="dev_unmaintained">Unsupported</string>
    <string name="dev_patch">Patch</string>
    <string name="dev_activity">Select Device</string>
    <string name="size_mb">%dMB</string>
    <string name="err_card_no_internet">No internet connection</string>
    <string name="err_card_error">An error has occurred</string>
    <string name="err_card_try_again">Try Again</string>
    <string name="guess_top">Your device is</string>
    <string name="guess_bottom">Looks like we support this device officially!\nIs that your device?</string>
    <string name="guess_fail">We can\'t identify it. It may be unsupported.</string>
    <string name="guess_correct">Yes, that\'s correct</string>
    <string name="guess_wrong">No, it\'s mistake</string>
    <string name="sel_activity">Select Device</string>
    <string name="inst_warn">Auto-install requires installed recovery (TWRP, OrangeFox, etc.) and root access. You need to reboot device to recovery after download is finished.</string>
    <string name="inst_file_found">This release is already downloaded to your device. Choose what you want to do with this release.</string>
    <string name="inst_install">Download and install</string>
    <string name="inst_download">Only download</string>
    <string name="inst_cancel">Cancel</string>
    <string name="inst_progress">%1$d MB of %2$d MB</string>
    <string name="inst_downloaded">Downloaded to %1$s</string>
    <string name="inst_bg_download">Download started.\nCheck notifications to track download progress.</string>
    <string name="ex_install_local">Install</string>
    <string name="ex_redownload">Redownload</string>
    <string name="ex_delete">Delete from device</string>
    <string name="bnav_install">Install</string>
    <string name="bnav_scripts">Scripts</string>
    <string name="bnav_logs">Logs</string>
    <string name="bnav_backups">Backups</string>
    <string name="notif_ch_update">Update Notifications</string>
    <string name="notif_ch_update_desc">Notifications about new releases that found in background</string>
    <string name="notif_ch_download">Download Progress</string>
    <string name="notif_ch_download_status">Download Result</string>
    <string name="notif_ch_download_desc">Shows download progress</string>
    <string name="notif_ch_download_status_desc">Shows download result</string>
    <string name="notif_new_ver">New release of OrangeFox available</string>
    <string name="notif_new_ver_sub">Version %1$s %2$s is available to download and install.\nTap \"Install\" to install this update.</string>
    <string name="notif_download_complete">Download of %1$s Finished</string>
    <string name="notif_download_failed">Download of %1$s Failed</string>
    <string name="notif_downloading">Downloading %1$s…</string>
    <string name="notif_downloading_app">Downloading app update…</string>
    <string name="notif_downloaded_app">App update downloaded</string>
    <string name="notif_download_failed_app">Failed to download app update</string>
    <string name="preparing">Preparing…</string>
    <string name="install">Install</string>
    <string name="reboot">Reboot</string>
    <string name="notify_pending_reboot">Reboot to install OrangeFox %1$s</string>
    <string name="notify_pending_reboot_sub">Update downloaded to %1$s.\nReboot to recovery to finish installation.</string>
    <string name="md5_check">Checking MD5…</string>
    <string name="activity_settings">Settings</string>
    <string name="pref_update">Recovery updates</string>
    <string name="pref_update_enable">Check for updates</string>
    <string name="pref_update_enable_desc">Check for recovery updates every day</string>
    <string name="pref_update_limited">Allow limited connections</string>
    <string name="pref_update_limited_desc">Allow to check updates on limited connections</string>
    <string name="pref_update_beta">Install beta versions</string>
    <string name="pref_update_auto">Download and install updates</string>
    <string name="pref_update_auto_desc">All downloaded updates will be downloaded and installed without prompt. You still need to reboot to recovery to complete installation.</string>
    <string name="pref_update_beta_desc">App will install all latest available versions including beta</string>
    <string name="pref_style">Appearance</string>
    <string name="pref_theme_system">System theme</string>
    <string name="pref_theme_system_desc">Use default system theme</string>
    <string name="pref_theme_dark">Use dark theme</string>
    <string name="pref_theme_dark_desc">Use dark theme instead of light theme</string>
    <string name="pref_device">Change device</string>
    <string name="pref_mirror">Mirror</string>
    <string name="pref_mirror_desc">Some mirrors may be unavailable for certain releases</string>
    <string name="mirror_dl">Netherlands</string>
    <string name="mirror_hk">Hong Kong</string>
    <string name="mirror_de">Germany</string>
    <string name="pref_pm">Missing permissions</string>
    <string name="pref_pm_desc">OrangeFox App needs permissions to download and install updates.\nTap here to grant Storage and Root permissions.</string>
    <string name="pref_about">About</string>
    <string name="pref_about_desc">Authors, licenses, links</string>
    <string name="about_me">Main developer and designer</string>
    <string name="about_yan">API creator, OrangeFox lead</string>
    <string name="about_sub">App for OrangeFox Recovery</string>
    <string name="about_news">News</string>
    <string name="about_support">Support</string>
    <string name="about_app_tg">App Group</string>
    <string name="about_web">Website</string>
    <string name="about_beta">Beta Support</string>
    <string name="about_oos">Open Source Licenses</string>
    <string name="dev_telegram">Maintainer\'s Telegram</string>
    <string name="annoy_opcol">Donate to OrangeFox</string>
    <string name="annoy_opcol_desc">Help us to improve our recovery</string>
    <string name="annoy_crowdin">You want to see app in your language?</string>
    <string name="annoy_crowdin_desc">Help us to translate app on Crowdin</string>
    <string name="annoy_support">Recovery not working?</string>
    <string name="annoy_support_desc">Ask a question in Telegram Group</string>
    <string name="annoy_upd">Enable auto updates</string>
    <string name="annoy_upd_desc">App will install all updates automatically in background</string>
    <string name="annoy_foxfiles">Some files are missing</string>
    <string name="annoy_foxfiles_desc">You need to reinstall recovery to have all functions</string>
    <string name="pref_annoy_enable">Show help messages</string>
    <string name="pref_annoy_enable_desc">Show helpful context messages</string>
    <string name="script_empty">Recovery Scripts</string>
    <string name="script_empty_desc">Easily install, backup and wipe.\n
        You still need OrangeFox installed, all actions will be executed in recovery.</string>
    <string name="script_backup_name">Backup Name</string>
    <string name="script_add_title">Add action</string>
    <string name="script_create">Create Script</string>
    <string name="script_zip">Install</string>
    <string name="script_zip_select">Select ZIP</string>
    <string name="script_add_umount">Add unmount action</string>
    <string name="script_add_mount">Add mount action</string>
    <string name="script_add_rw">Add remount R/W action</string>
    <string name="script_var_val">Value</string>
    <string name="script_decrypt_text">Password</string>
    <string name="script_decrypt_pattern">Pattern</string>
    <string name="partition">Partition</string>
</resources>