<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:shouldDisableView="true"
        app:layout="@layout/pref_about_header" />
    <Preference
        app:key="about"
        app:icon="@mipmap/fordownloads"
        app:title="fordownloads"
        app:summary="@string/about_me"
        app:layout="@layout/pref_card">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://t.me/fordownloads"
            />
    </Preference>
    <Preference
        app:key="about"
        app:icon="@mipmap/yan"
        app:title="Yan"
        app:summary="@string/about_yan"
        app:layout="@layout/pref_card">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://t.me/MrYacha"
            />
    </Preference>
        <Preference
            app:title="@string/about_news"
            app:summary="\@OrangeFoxNEWS"
            app:icon="@drawable/ic_tg">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/OrangeFoxNEWS"
                />
        </Preference>
        <Preference
            app:title="@string/about_support"
            app:summary="\@OrangeFoxChat"
            app:icon="@drawable/ic_tg">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/OrangeFoxChat"
                />
        </Preference>
        <Preference
            app:title="@string/about_beta"
            app:summary="\@OrangeFoxBeta"
            app:icon="@drawable/ic_tg">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/OrangeFoxBeta"
                />
        </Preference>
        <Preference
            app:title="GitLab"
            app:icon="@drawable/ic_gitlab">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://gitlab.com/fordownloads/orangefox-app"
                />
        </Preference>
        <Preference
            app:title="@string/about_oos"
            app:icon="@drawable/ic_round_menu_book_24" >
            <intent
                android:targetPackage="com.fordownloads.orangefox"
                android:targetClass="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"/>
        </Preference>
</PreferenceScreen>