<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBox1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="33dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:hint="@string/script_decrypt_text"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnOpenPattern"
        style="@style/ThemeButtonDialogOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:text="@string/script_decrypt_pattern"
        android:backgroundTint="@color/fox_card"
        app:icon="@drawable/ic_round_apps_24" />
    <Button
        android:id="@+id/btnAdd"
        style="@style/ThemeButtonDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:text="@string/script_add_title"
        app:icon="@drawable/ic_round_add_24" />
</LinearLayout>