<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@android:color/transparent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/ThemeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="26dp"
        app:contentPaddingTop="12dp"
        app:contentPaddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="4dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/drag"/>

            <TextView
                style="@style/ThemeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/guess_top"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/guessDeviceCode"
                style="@style/ThemeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/guessBottomText"
                style="@style/ThemeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="16dp"
                android:text="@string/guess_bottom"
                android:textAlignment="center" />

            <ProgressBar
                android:id="@+id/setupProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <Button
                android:id="@+id/guessSelect"
                style="@style/ThemeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sel_activity"

                app:icon="@drawable/ic_outline_explore_24" />

            <Button
                android:id="@+id/btnInstall"
                style="@style/ThemeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guess_correct"
                app:icon="@drawable/ic_round_check_24" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/ThemeButtonOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fox_card"
                android:text="@string/guess_wrong"
                app:icon="@drawable/ic_round_close_24" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>