<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/ThemeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="8dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="26dp"
        app:contentPaddingTop="12dp"
        app:contentPaddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="4dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:src="@drawable/drag"/>
            <TextView
                style="@style/ThemeTitle"
                android:id="@+id/installTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                tools:text="Install R11.0_005 Stable"
                android:textAlignment="center" />

            <TextView
                style="@style/ThemeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="16dp"
                android:text="@string/inst_file_found"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnInstall"
                style="@style/ThemeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_install_local"
                app:icon="@drawable/ic_round_system_update_24" />

            <Button
                android:id="@+id/btnDownload"
                style="@style/ThemeButtonOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_redownload"
                android:backgroundTint="@color/fox_card"
                app:icon="@drawable/ic_round_save_alt_24" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/ThemeButtonOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fox_card"
                android:text="@string/ex_delete"
                android:textColor="@color/google_error"
                app:iconTint="@color/google_error"
                app:icon="@drawable/ic_delete" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>